# DSA4265-group8

./: .gitignore  AAPL_Investment_Analysis_2026-04-08.md  AAPL_Investment_Analysis_2026-04-09.md  README.md  architecture  nvda_report.md  pyproject.toml
RAG_test/: README.md  benchmark_dataset.json  cache_chunked_filings.py  cache_raw_filings.py  common.py  evaluators.py  rag_evaluation.ipynb  run_rag_evaluation.py
RAG_test/data/chunked_filings/: aapl_10q_chunks.json  goog_10q_chunks.json  meta_10q_chunks.json  nvda_10q_chunks.json  (+1 more)
RAG_test/results/: rag_evaluation_report.json
backend/agents/: __init__.py  agent5.py  filing_chunker.py  filing_rag_service.py  financial_data_agent.py  quarterly_sentiment.py  quarterly_sentiment_tool.py  report_draft_agent.py  retrieval_pipeline.py  supervisor_framework.py  test_agent.py  test_agent_super.py  test_agent_super_final.py  test_agent_super_final2.py  yahoo_finance_agent.py
evaluation/: AAPL_analysis_supervised_2026-04-10.md  AAPL_tool_trace.txt  aapl_evaluation.txt  evaluate.py  evaluate1.py  goog_evaluation.txt  meta_evaluation.txt  nvda_evaluation.txt  quarterly_sentiment_batch_20260411_140321.json  quarterly_sentiment_batch_20260411_140321.txt  tsla_evaluation.txt
financial_investor_note_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_10q_rag.py  test_agent5.py  test_filing_chunker.py  test_quarterly_sentiment.py  test_quarterly_sentiment_tool.py  test_rag_test_common.py  test_report_draft_agent.py  test_retrieval_pipeline.py  test_supervisor_framework.py  test_yahoo_finance_agent.py
(+5 files in other folders)
