[project]
name = "financial-investor-note-generator"
version = "0.1.0"
description = "Multi-agent workflow for generating investor notes from market data and SEC filings."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "yfinance",
]

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["frontend*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
