[project]
name = "financial-investor-note-generator"
version = "0.1.0"
description = "Multi-agent workflow for generating investor notes from market data and SEC filings."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4",
  "lxml",
  "openai",
  "pandas",
  "python-dotenv",
  "yfinance",
]

[project.optional-dependencies]
rag-eval = [
  "bert-score",
  "sentence-transformers",
]

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["frontend*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
